package sales;

//@@author sarahchow03

/**
 * The Sale class represents a sales data for a manga,
 * including the quantity sold, the unit price, and the total revenue generated.
 */
public class Sale {
    private int quantitySold;
    private double unitPrice;
    private double totalRevenue;

    /**
     * Constructs a new Sale object with the specified quantity sold and unit price.
     * The total revenue is automatically calculated upon creation.
     *
     * @param quantitySold the number of mangas sold
     * @param unitPrice the price per manga sold
     */
    public Sale(int quantitySold, double unitPrice) {
        this.quantitySold = quantitySold;
        this.unitPrice = unitPrice;
        this.totalRevenue = getTotalRevenue();
    }

    public int getQuantitySold() {
        return quantitySold;
    }

    public void setQuantitySold(int quantitySold) {
        this.quantitySold = quantitySold;
    }

    public double getUnitPrice() {
        return unitPrice;
    }

    public void setUnitPrice(double unitPrice) {
        this.unitPrice = unitPrice;
    }

    /**
     * Calculates the total revenue generated by the manga by multiplying the quantity
     * of copies sold by its unit price per copy.
     * @return the total revenue as a double value
     */
    public double getTotalRevenue() {
        totalRevenue = quantitySold * unitPrice;
        return totalRevenue;
    }

    /**
     * Returns a string representation of the Sale object,
     * showing the number of copies sold, unit price, and total revenue.
     *
     * @return a string describing the sale
     */
    @Override
    public String toString() {
        return "[Copies sold: " + quantitySold + ", Unit price: $" + String.format("%.2f", unitPrice)
                + ", Revenue: $" + String.format("%.2f", totalRevenue) + " ]" ;
    }
}
